--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,7 +27,7 @@
     padding-right: 10px;
     padding-left: 10px;
     position: absolute;
-    background: $danger;
+    background: $success;
     height:3rem;
     top:1rem;
     right:0rem;
